--- a/Vikas Portfolio.html
+++ b/Vikas Portfolio.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+ <html lang="en">  
+   <head>
     <meta charset="UTF-8">
     <title>VikasPortfolio</title>
     <style>
@@ -143,9 +142,10 @@
     </section>
     
     <footer>
-      &#169 2025 My Portfolio
+      &#169; 2025 My Portfolio
     </footer>
 
   </body>
+
 
 </html>
